    .svn-base files get added when you --refresh under an svn checkout.
  * depends on libparse-debianchangelog-perl (Closes: #526660)

  [ Damyan Ivanov ]
  * add 'make' to the list of commands
  * remove code supporting CPAN < 1.9205, which is what ships with
    perl-modules 5.10 (on which we already depend)
  * move CPAN configuration into a method

 -- gregor herrmann <gregoa@debian.org>  Mon, 27 Apr 2009 16:42:59 +0200

dh-make-perl (0.55) unstable; urgency=low

  [ Peter Pentchev ]
  * Tweak the "nocheck" test in debian/rules:
    - unbreak it: do not output the list of the group ID's of
      the developer's local account :)
    - remove the tab in the templates now that the contents is no
      longer a Makefile target command but an ifeq/endif pair instead

  [ Damyan Ivanov ]
  * t/corelist.t: ExtUtils::Miniperl is now recognised by Module::CoreList, so
    don't mark it as TODO anymore
  * Add Peter Pentchev to the list of contributors, move Ryan to keep the list
    sorted

 -- Damyan Ivanov <dmn@debian.org>  Wed, 22 Apr 2009 21:58:31 +0300

dh-make-perl (0.54) unstable; urgency=low

  [ gregor herrmann ]
  * Change section to "perl" to match the changes in the overrides file.

  [ Damyan Ivanov ]
  * ignore --notest; instead, create debian/rules that obeys nocheck in
    DEB_BUILD_OPTIONS
    + add NEWS about that
    + remove --notest from POD
  * rules, control, compat: migrate to DH7
    + install links via debian/links, README via debian/docs
    + this gives support to 'nocheck' in DEB_BUILD_OPTIONS (Closes: #523560)
  * revert defaulting --dist to 'sid' when --pkg-perl is given
  * fix t/debian-version.t to allow (ignore) ~foo version suffix

  [ Ryan Niebur ]
  * add myself to the AUTHOR section

 -- Damyan Ivanov <dmn@debian.org>  Wed, 22 Apr 2009 13:31:45 +0300

dh-make-perl (0.53) unstable; urgency=low

  [ Pierre Neyron ]
  * Fix apt-file dependency lookup if --dist is set to list of distribution,
    e.g. "{stable,testing}"
